[package]
name = "double_ratchet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x3dh = { path  = "../x3dh" }
hkdf = "0.12.4"
sha2 = "0.10.8"
x25519-dalek = { version = "2.0.1", features = ["static_secrets", "getrandom"]}
thiserror = "1.0.59"

aes = { version = "0.8.3", features = ["zeroize"] }
cbc = { version = "0.1.2", features = ["std", "zeroize"] }